<resources>
    <string name="app_name">Bomboplats</string>
    <string name="title_activity_login">Bomboplats</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Inicia sesión o regístrate</string>
    <string name="action_sign_in_short">Inicia sesión</string>
    <string name="welcome">¡Bienvenido/a, %s!</string>
    <string name="invalid_username">No es un email válido</string>
    <string name="invalid_password">La contraseña debe tener más de 5 caracteres</string>
    <string name="login_invalid_credentials">Correo o contraseña incorrecta</string>
    <string name="login_failed">Error al iniciar sesión</string>
    <string name="drawer_open">Abrir menú</string>
    <string name="drawer_close">Cerrar menú</string>
    <string name="pagar_ahora">PAGAR AHORA</string>
    <string name="confirmar_pedido">CONFIRMAR PEDIDO</string>
    <string name="realizar_pedido">AÑADIR AL CARRITO</string>
    <string name="eliminar_del_carro">ELIMINAR DEL CARRITO</string>
    <string name="guardar_cambios">GUARDAR CAMBIOS</string>
    <string name="confirmar_cambio">CONFIRMAR CAMBIO</string>
    <string name="cambiar_correo_electronico">CAMBIAR CORREO ELECTRÓNICO</string>
    <string name="cambiar_contrasena">CAMBIAR CONTRASEÑA</string>

    <!-- Mantener sesión -->
    <string name="mantener_sesion">Mantener la sesión iniciada</string>

    <!-- Registro -->
    <string name="title_register">Crear Cuenta</string>
    <string name="prompt_name">Nombre completo</string>
    <string name="prompt_confirm_password">Confirmar contraseña</string>
    <string name="action_register">Registrarse</string>
    <string name="login_link">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="register_link">¿No tienes cuenta? Regístrate aquí</string>
    <string name="error_passwords_dont_match">Las contraseñas no coinciden</string>
    <string name="registration_complete">Registro completado</string>
    <string name="error_email_exists">Prueba con otro correo</string>

    <!-- Direcciones -->
    <string name="titulo_direcciones">Mis Direcciones</string>
    <string name="hint_nueva_direccion">Añadir nueva dirección...</string>
    <string name="btn_mis_direcciones">Mis Direcciones</string>
    <string name="toast_direccion_vacia">La dirección no puede estar vacía</string>
    <string name="toast_direccion_borrada">Dirección desvinculada</string>
    <string name="toast_direccion_guardada">Dirección guardada</string>
    <string name="toast_direccion_actualizada">Dirección actualizada</string>
    <string name="error_limite_direcciones">Has superado el limite de direcciones, borra alguna para añadir una nueva</string>
    <string name="label_no_direcciones">Aún no tienes direcciones guardadas</string>
    <string name="label_seleccionar_direccion">Pulse aqui para seleccionar una dirección</string>
    <string name="buscar_direccion">Buscar dirección...</string>
    <string name="btn_anadir_direccion">+ Añadir dirección</string>
    <string name="no_encontrado_direccion">¿No has encontrado tu dirección? Introdúcela aquí</string>
    <string name="nueva_direccion_titulo">Nueva Dirección</string>
    <string name="editar_direccion_titulo">Editar Dirección</string>
    <string name="poblacion">Población</string>
    <string name="calle">Calle</string>
    <string name="codigo_postal">Código Postal</string>
    <string name="portal">Portal</string>
    <string name="piso">Piso</string>
    <string name="toast_campos_obligatorios">Por favor, rellena todos los campos obligatorios</string>
    <string name="error_cp_invalido">El código postal debe tener exactamente 5 cifras</string>
    <string name="label_busca_entrega">Busca una dirección de entrega</string>
    <string name="error_guardar_direccion">Error al guardar la dirección</string>

    <!-- Navigation Drawer -->
    <string name="nav_inicio">Inicio</string>
    <string name="nav_cuenta">Cuenta</string>
    <string name="nav_favoritos">Mis bombos favoritos</string>
    <string name="nav_estado">Estado de mis bombos</string>
    <string name="nav_historial">Historial de bombos</string>
    <string name="nav_notificaciones">Notificaciones</string>
    <string name="nav_configuracion">Configuración</string>
    <string name="nav_cerrar_sesion">Cerrar sesión</string>

    <!-- Configuración -->
    <string name="config_titulo">Configuración</string>
    <string name="config_modo_oscuro">Modo Oscuro</string>
    <string name="config_idioma">Idioma</string>
    <string name="idioma_es">Español</string>
    <string name="idioma_en">Inglés</string>

    <!-- Perfil -->
    <string name="perfil_editar">Editar Perfil</string>
    <string name="perfil_nombre">Nombre</string>
    <string name="perfil_mail_actual">Correo actual</string>
    <string name="perfil_mail_nuevo">Nuevo correo electrónico</string>
    <string name="perfil_pass_actual">Contraseña actual</string>
    <string name="perfil_pass_nueva">Nueva contraseña</string>
    <string name="hint_nombre">Tu nombre</string>
    <string name="toast_perfil_guardado">Perfil actualizado correctamente</string>
    <string name="toast_fav_add">Añadido a favoritos</string>
    <string name="toast_fav_rem">Eliminado de favoritos</string>
    <string name="bombo_eliminado_del_carro">Se ha eliminado el plato del carrito</string>
    <string name="default_nombre_usuario">User</string>
    <string name="default_email_usuario">mail@example.com</string>
    <string name="cambiar_correo_titulo">Cambiar Correo</string>
    <string name="hint_mail_actual">Introduce tu correo actual</string>
    <string name="hint_mail_nuevo">Introduce el nuevo correo</string>
    <string name="cambiar_pass_titulo">Cambiar Contraseña</string>
    <string name="hint_pass_actual">Introduce tu contraseña actual</string>
    <string name="hint_pass_nueva">Introduce la nueva contraseña</string>
    <string name="toast_foto_seleccionada">Foto seleccionada</string>
    <string name="toast_rellenar_campos">Por favor, rellena todos los campos</string>
    <string name="toast_correo_actualizado">Correo actualizado con éxito</string>
    <string name="toast_pass_actualizada">Contraseña actualizada con éxito</string>
    <string name="error_mail_no_coincide">El correo actual no coincide</string>
    <string name="error_nombre_vacio">El nombre no puede estar vacío</string>
    <string name="error_image_too_large">La imagen pesa demasiado y no se cambiará</string>
    <string name="error_mail_invalido">Introduce un correo electrónico válido</string>
    <string name="error_mail_igual_al_actual">Introduce un correo diferente al actual</string>
    <string name="error_actualizar_correo">Error al actualizar el correo</string>
    <string name="eliminar_cuenta">ELIMINAR CUENTA</string>
    <string name="dialog_eliminar_cuenta_titulo">¿Estás seguro de que quieres eliminar tu cuenta?</string>
    <string name="dialog_eliminar_cuenta_mensaje">Esta acción será permanente.</string>
    <string name="si">SÍ</string>
    <string name="no">NO</string>
    <string name="cuenta_eliminada">Cuenta eliminada correctamente</string>
    <string name="error_nickname_largo">El nombre es demasiado largo (máximo 32 caracteres)</string>
    <string name="error_email_largo">El correo electrónico es demasiado largo (máximo 254 caracteres)</string>
    <string name="error_password_largo">La contraseña es demasiado larga (máximo 60 caracteres)</string>


    <!-- Carrito y Pedidos -->
    <string name="carrito_vacio">Tu carrito está vacío</string>
    <string name="total">TOTAL</string>
    <string name="label_total">Total: </string>
    <string name="finalizar_pedido">Finalizar Pedido</string>
    <string name="direccion_entrega">Dirección de entrega</string>
    <string name="hint_direccion">Calle, número, piso…</string>
    <string name="metodo_pago">Método de pago</string>
    <string name="pago_tarjeta">Tarjeta de Crédito/Débito</string>
    <string name="pago_paypal">PayPal</string>
    <string name="pago_efectivo">Efectivo al repartidor</string>
    <string name="datos_tarjeta">Datos de la tarjeta</string>
    <string name="hint_numero_tarjeta">Número de tarjeta</string>
    <string name="hint_exp">MM/AA</string>
    <string name="hint_cvv">CVV</string>
    <string name="toast_carrito_vaciado">Carrito vaciado</string>
    <string name="toast_pedido_realizado_exito">¡Pedido %1$s realizado con éxito!</string>
    <string name="carrito_item_added">¡%1$d x %2$s añadido al carrito!</string>
    <string name="estado_vacio">No tienes pedidos en curso ahora mismo</string>
    <string name="label_estado">Estado: </string>
    <string name="estado_en_preparacion">En preparación</string>
    <string name="estado_entregado">Entregado</string>
    <string name="estado_de_camino">En reparto</string>
    <string name="prefix_pedido_id">Pedido #</string>
    <string name="label_productos">Productos:</string>
    <string name="label_historial_titulo">Mis Pedidos</string>
    <string name="historial_vacio">Aún no has realizado ningún pedido</string>
    <string name="notificaciones_vacia">Aún no hay notificaciones de ningún bombo</string>
    <string name="favoritos_vacio">Aún no hay platos favoritos</string>
    <string name="dialog_vaciar_carrito_titulo">¿Vaciar carrito?</string>
    <string name="dialog_vaciar_carrito_mensaje">¿Estás seguro de que quieres borrar todos los platos del carrito?</string>

    <!-- Notificaciones dinámicas -->
    <string name="noti_titulo_estado">Estado de Bombos</string>
    <string name="noti_msg_preparacion">Tu pedido #%1$s está en preparación 🍳</string>
    <string name="noti_msg_de_camino">Tu pedido #%1$s está en reparto 🛵</string>
    <string name="noti_msg_entregado">¡Tu pedido #%1$s ha sido entregado! 😋</string>

    <!-- Plato Detail -->
    <string name="label_ingredientes">Modificaciones:</string>
    <string name="label_alergenos">Tags:</string>
    <string name="no_especificados">Sin modificaciones</string>
    <string name="sin_alergenos">Sin tags</string>
    <string name="placeholder_nombre_plato">Nombre del Plato</string>
    <string name="placeholder_descripcion_plato">Descripción del plato…</string>
    <string name="label_modificaciones_pedido">Modificaciones de este pedido:</string>

    <!-- Home -->
    <string name="inicio_error_carga">No se pudieron cargar los restaurantes</string>

    <!-- Search Bar -->
    <string name="buscar_bomboplats">Buscar bomboplats…</string>

    <!-- UI Generals -->
    <string name="atras_salir">Pulsa de nuevo para salir</string>
    <string name="error_sin_internet">Si no tienes conexion a internet no se cargaran los restaurantes ni podras hacer modificaciones a tu cuenta. Por favor conectate a internet para continuar.</string>
    <string name="desc_cerrar_aviso">Cerrar aviso</string>
    <string name="desc_icono_alerta">Icono de alerta</string>
</resources>
