<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_titulo_direcciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_direcciones"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ir_nueva_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_anadir_direccion"
        android:textAllCaps="false"
        android:backgroundTint="@color/primary"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_direcciones" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_direcciones"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_ir_nueva_direccion" />

    <TextView
        android:id="@+id/tv_no_direcciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_no_direcciones"
        android:textColor="@color/text_color_secondary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_ir_nueva_direccion" />

</androidx.constraintlayout.widget.ConstraintLayout>
